--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         /* Header con imagen de fondo */
         .header {
             background: linear-gradient(rgba(30, 86, 49, 0.7), rgba(30, 86, 49, 0.7)), 
-                        url('FloraFauna/imágenes/sierra.jpg') center/cover;
+                        url('imágenes/sierra.jpg') center/cover;
             color: white;
             padding: 2rem 1rem;
             text-align: center;
